# moonshine

./: .gitignore  .gitmodules  CMakeLists.txt  MoonshineApp.cpp  MoonshineApp.h  bootstrap.py  compile.bat  main.cpp  vcpkg.json
editor/: Camera.cpp  Camera.h  EngineSystems.h  GltfLoader.cpp  GltfLoader.h  InputHandler.cpp  InputHandler.h  Mesh.h  ModelLoader.cpp  ModelLoader.h  Node.cpp  Node.h  RequestResolver.cpp  RequestResolver.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Settings.h  Time.cpp  Time.h  Transform.h
editor/logging/: LogMessage.h  Logger.cpp  Logger.h  LoggerType.cpp  LoggerType.h  UILogger.h
editor/ui/: LobbyManager.cpp  LobbyManager.h  SceneGraph.cpp  SceneGraph.h  StatisticsManager.cpp  StatisticsManager.h  UIWindow.cpp  UIWindow.h  WorkspaceManager.cpp  WorkspaceManager.h
editor/ui/net/: InputFloat3.cpp  InputFloat3.h  UIManager.cpp  UIManager.h
graphics/: Buffer.cpp  Buffer.h  Descriptors.cpp  Descriptors.h  Device.cpp  Device.h  FrameInfo.h  GpuBuffer.h  Gui.cpp  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h  SwapChain.cpp  SwapChain.h  TextureImage.cpp  TextureImage.h  TextureSampler.cpp  TextureSampler.h  UniformBuffer.cpp  UniformBuffer.h  Window.cpp  Window.h
graphics/gl/: GLApp.cpp  GLApp.h  GLBuffer.cpp  GLBuffer.h  GLGuiRenderer.cpp  GLGuiRenderer.h  GLProgram.cpp  GLProgram.h  GLShader.cpp  GLShader.h  GLUtils.h
graphics/vk/: Buffer.cpp  Device.cpp  Device.h  FrameInfo.h  Gui.h  Material.h  MaterialManager.cpp  Pipeline.cpp  Renderer.cpp  SwapChain.cpp  SwapChain.h  TextureSampler.cpp  Window.cpp  Window.h
net/: Client.cpp  Client.h  LobbyConnector.cpp  LobbyConnector.h  Server.cpp  Server.h  TcpConnection.cpp  TcpConnection.h
resources/shaders/: shader.frag  shader.vert
resources/shaders/vk/: shader.frag
utils/: BufferUtils.h  CommandBufferUtils.h  Constants.h  FileUtils.h  InputUtils.h  InputtUtils.h  SafeQueue.h  VkUtils.h  VkValidationLayerUtils.h
